--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
+            "backgroundColor": "#005dff"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
@@ -25,7 +25,7 @@
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/icon.png",
-                "backgroundColor": "#FFFFFF"
+                "backgroundColor": "#005dff"
             },
             "package": "com.corydio.discgolfshuffle",
             "versionCode": 1,
